2001-09-24  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: (rsvg_entity_decl): Change so it can handle a NULL
	for the content passed in. Happens at least if the .svg file
	is empty and presumably in other cases.
	(rsvg_handle_free): Handle case where pixbuf is NULL.
	* test-rsvg.c: (main): Don't write anything out if a NULL
	pixbuf is returned. This can happen if the .svg file is
	empty.

2001-09-24  Darin Adler  <darin@bentspoon.com>

	* librsvg-2.0.pc.in: Update to point to libart 2.

2001-09-17  Darin Adler  <darin@bentspoon.com>

	* rsvg.h:
	* rsvg.c: (rsvg_text_handler_characters), (rsvg_set_fonts_dir):
	Roll back fonts_dir to be global like before. We can get rid
	of fonts_dir altogether when we port librsvg to use pango
	instead of using freetype directly.

2001-09-15  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_paint_server_lin_grad_free),
	(rsvg_paint_server_rad_grad_free): Fix some NULL dereferences.

	* rsvg.c: (rsvg_handle_write), (rsvg_handle_close): Add FIXME
	to places that have half-hearted attempt at handling GError.
	(rsvg_pixbuf_from_file_at_zoom), (rsvg_pixbuf_from_file_at_size):
	Handle case where fopen fails (but not the GError part).

2001-09-10  Jonathan Blandford   <jrb@redhat.com>

	* librsvg-features.c:
	* rsvg.c: (rsvg_start_svg), (rsvg_parse_style_arg),
	(rsvg_parse_style), (rsvg_parse_transform_attr),
	(rsvg_parse_style_attrs), (rsvg_push_opacity_group),
	(rsvg_pop_opacity_group), (rsvg_start_g), (rsvg_end_g),
	(rsvg_render_svp), (rsvg_render_bpath), (rsvg_start_path),
	(rsvg_text_handler_characters), (rsvg_start_text),
	(rsvg_start_defs), (rsvg_gradient_stop_handler_new),
	(rsvg_start_linear_gradient), (rsvg_start_radial_gradient),
	(rsvg_start_element), (rsvg_end_element), (rsvg_characters),
	(rsvg_get_entity), (rsvg_entity_decl), (rsvg_error_quark),
	(rsvg_handle_new), (rsvg_handle_set_fonts_dir),
	(rsvg_handle_set_size_callback), (rsvg_handle_write),